base/sprintstart-keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sprintstart-keycloak
spec:
  selector:
    app: sprintstart-keycloak
  ports:
    - port: 8080
      targetPort: 8080
