base/sprintstart-keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sprintstart-keycloak
spec:
  rules:
  - host: keycloak.sprintstart.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sprintstart-keycloak
            port:
              number: 8080
